--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://minard.github.io/web-portfolio",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
