--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "react",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://yobubs.github.io/web-portfolio",
+  "homepage": "https://yobubs.github.io/asdasd",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
